fix : refactored some apis for better response